tests/neg/print-tuple-union.scala
trait Test:
  def foo[A]: Tuple.Union[A]
  def bar[B]: Int = foo[B] // error
